# ledoh-torch

./: .gitignore  LICENSE  README.md  lloyd_dispersion.py  mmd.py  pyproject.toml  sliced_dispersion.py  utils.py
examples/: bench_simple.py  sgd_axisaligned.py
examples/bench/: bench_simple.py  plot.py  plot_tammes.py
examples/bench/toy/: README.md  bench_utils.py  config.yaml  experiment.py  requirements.txt  uniform_sampling.py
examples/bench/toy/plots/: example.ipynb  plot_utils.py
examples/tammes/: tammes.py
ledoh_torch/: __init__.py  kernel_dispersion.py  kernel_semibatched_dispersion.py  lloyd_dispersion.py  mma_dispersion.py  pairwise_dispersion.py  sliced_batch.py  sliced_dispersion.py  sliced_sphere_func.py  sphere_dispersion.py  ssw.py  utils.py
src/: __init__.py
tests/: check_sliced.py  test_bmm.py  test_kernel_dispersion.py  test_kernel_dispersion_semibatched.py  test_lloyd_dispersion.py  test_mma.py  test_sliced_dispersion.py  test_utils.py
