[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ledoh_torch"]

[project]
name = "ledoh-torch"
version = "0.0.6"
authors = [
  { name="E. Tokarchuk, V.Niculae, H.C. Bakker", email="evgeniya@tokarch.uk" },
]
description = "pytorch-based optimization functions for learning embedding dispersion on hyperspheres"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "torch>=2.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"
